[gd_scene load_steps=3 format=3 uid="uid://bowyv7nc7iodb"]

[ext_resource type="Script" path="res://main_scene.gd" id="1_a7mwe"]
[ext_resource type="PackedScene" uid="uid://61o2myffx4pq" path="res://control_point.tscn" id="2_uwfet"]

[node name="Main Scene" type="Node2D"]
script = ExtResource("1_a7mwe")

[node name="Line2D" type="Line2D" parent="."]
points = PackedVector2Array(0, 0, 0, 100, 0, 200, 0, 300)

[node name="ControlPoint" parent="." instance=ExtResource("2_uwfet")]
position = Vector2(208, 187)

[node name="ControlPoint2" parent="." instance=ExtResource("2_uwfet")]
position = Vector2(100, 200)

[node name="ControlPoint3" parent="." instance=ExtResource("2_uwfet")]
position = Vector2(100, 300)

[node name="ControlPoint4" parent="." instance=ExtResource("2_uwfet")]
position = Vector2(100, 400)
